2000-09-30  Bryce McKinlay  <bryce@albatross.co.nz>
	* index.html: Add note about GC bitmap marking.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -72,6 +72,16 @@ i
 <table>
 
 <tr><td valign="top">
+<b>September 30, 2000</b>
+</td><td>
+Bryce McKinlay checked in a patch that enables bitmap-descriptor based 
+marking in the garbage collector. This code includes work by
+Tom Tromey and Hans Boehm, and results in some significant 
+<A HREF="http://sources.redhat.com/ml/java-patches/2000-q3/msg00161.html">
+performance gains</A> in memory-intensive code.
+</td></tr>
+
+<tr><td valign="top">
 <b>September 8, 2000</b>
 </td><td>
 Warren Levy checked in various patches that provide much a more compatible
@@ -230,7 +240,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.47 2000/09/06 06:30:01 tromey Exp $
+$Id: index.html,v 1.48 2000/09/08 19:53:41 warrenl Exp $
 </small>
 </address>
 
