Remove dead or ancient C9X links and add some new links to C standards and history information.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -270,9 +270,48 @@ tahoe. These are listed here just for completeness.
   <li><a href="ftp://cs.rice.edu/public/preston/optimizer">Massively
   Scalar Compiler Project</a>
 
-  <li>David M Keaton's site: <a href="http://www.dmk.com">http</a> or
-  <a href="ftp://ftp.dmk.com">ftp</a>. c9x stuff is in
-  <a href="ftp://ftp.dmk.com/DMK/sc22wg14/c9x">ftp://ftp.dmk.com/DMK/sc22wg14/c9x</a>
+  <li>C standards information:
+
+  <ul>
+
+    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/">WG14 (C
+    standards committee)</a></li>
+
+    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/n897.pdf">Draft
+    C99 Rationale</a></li>
+
+    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/summary.htm">C99
+    Defect Reports</a></li>
+
+    <li><a href="ftp://ftp.uu.net/doc/standards/ansi/X3.159-1989/">C89
+    Rationale (sources)</a></li>
+
+    <li><a href="http://www.lysator.liu.se/c/rat/title.html">C89
+    Rationale (HTML)</a></li>
+
+    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/tc1.htm">C89
+    Technical Corrigendum 1</a></li>
+
+    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/tc2.htm">C89
+    Technical Corrigendum 2</a></li>
+
+    <li><a href="http://wwwold.dkuug.dk/JTC1/SC22/WG14/www/docs/dr.htm">C89
+    Defect Reports</a></li>
+
+  </ul></li>
+
+  <li>C historical information:
+
+  <ul>
+
+    <li><a href="http://cm.bell-labs.com/cm/cs/who/dmr/chist.html">The
+    Development of the C Language</a>, by Dennis M. Ritchie (also in
+    <a href="http://cm.bell-labs.com/cm/cs/who/dmr/chist.ps">PostScript</a>
+    and <a href="http://cm.bell-labs.com/cm/cs/who/dmr/chist.pdf">PDF</a>).</li>
+    <li>An early <a href="http://cm.bell-labs.com/cm/cs/who/dmr/cman.ps">C
+    Reference Manual</a>.</li>
+
+  </ul></li>
 
 <p>
 
@@ -284,8 +323,6 @@ tahoe. These are listed here just for completeness.
   <li><a href="http://www.almaden.ibm.com/journal/">IBM Journal of Research and Development</a>
 
   <li><a href="http://www.esofta.com/softspecs.html">System V PowerPC ABI</a>
-
-  <li><a href="http://www.dkuug.dk/JTC1/SC22/WG14/www/docs/n794.htm">C9X draft</a>
 
   <li><a href="ftp://ftp.dfrc.nasa.gov/pub/x3j3/ncsa/doc/standing/007/">F2K draft</a>
 
