Cygnus -> Red Hat

--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -27,15 +27,15 @@ reach them is the gcc <a href="lists.html">mailinglist</a>.
 <li>David Edelsohn (IBM)
 <li>Kaveh R. Ghazi
 <li>Torbjorn Granlund (Swox AB)
-<li>Jeffrey A. Law (Cygnus)
+<li>Jeffrey A. Law (Red Hat)
 <li>Marc Lehmann (Technische Universität Karlsruhe)
-<li>Jason Merrill (Cygnus)
+<li>Jason Merrill (Red Hat)
 <li>David Miller (RedHat)
 <li>Mark Mitchell (CodeSourcery)
 <li>Toon Moene (Koninklijk Nederlands Meteorologisch Instituut)
 <li>Gerald Pfeifer (Vienna University of Technology)
 <li>Joel Sherrill (OAR Corporation)
-<li>Jim Wilson (Cygnus)
+<li>Jim Wilson (Red Hat)
 </ul>
 
 <p><small>Membership in the steering committee is a personal membership.
