2000-10-04  Bryce McKinlay  <bryce@albatross.co.nz>
	* index.html, old-news.html: Move older news entries to old-news.html.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -98,86 +98,7 @@ work towards merging the gcc and libgcj source trees.
 </td></tr>
 
 <tr><td valign="top">
-<b>August 20, 2000</b>
-</td><td>
-We haven't had any news in a while, but things have still been
-happening: Anthony Green recently merged in a lot of Classpath code,
-in particular the <tt>java.util.jar</tt> and
-<tt>java.security.cert</tt> packages.  Also, Bryce McKinlay and Rolf
-Rasmussen have done a fair amount of work on <tt>java.awt</tt> (not
-ready for a screen shot yet, though).
-</td></tr>
-
-<tr><td valign="top">
-<b>August 3, 2000</b>
-</td><td>
-Oskar Liljeblad has made the first release of
-<a href="http://gnome-gcj.sourceforge.net">gnome-gcj</a>.  This is a
-project to create a complete set of <a href="http://www.gtk.org/">Gtk+</a>
-and <a href="http://www.gnome.org/">Gnome</a> bindings for Java using
-gcj.
-</td></tr>
-
-<tr><td valign="top">
-<b>June 27, 2000</b>
-</td><td>
-A new <A HREF="done.html">Done with GCJ</A> section was added.
-Send your GCJ stories <A HREF="mailto:java-discuss@sources.redhat.com">
-here</A>.
-</td></tr>
-
-<tr><td valign="top">
-<b>May 19, 2000</b>
-</td><td>
-Today we merged some major work done at Red Hat.  This included:
-<ul>
-<li> Substantial work for the IA-64 port.
-<li> <tt>java.beans</tt> from <a href="http://www.classpath.org">Classpath</a>.
-<li> A somewhat modified initial implementation of serialization.
-     (This is known not to interoperate with other implementations yet.)
-<li> Miscellaneous bug fixes.
-</td></tr>
-
-<tr><td valign="top">
-<b>May 2, 2000</b>
-</td><td>
-Tom Tromey checked in the JNI stubs patch for gcj.  This patch makes
-it possible to use compiled Java code where the native methods are
-implemented using JNI.
-</td></tr>
-
-<tr><td valign="top">
-<b>April 22, 2000</b>
-</td><td>
-The new <a href="projects.html">GCJ Projects</a> page is brought online.
-</td></tr>
-
-<tr><td valign="top">
-<b>April 10, 2000</b>
-</td><td>
-Warren Levy checked in a JDK 1.1 compatible version of
-<a href="http://www.classpath.org">Classpath's</a> <tt>java.sql</tt>.
-Once we have merged the necessary JDK 1.2 support, we'll update
-this to directly track Classpath.
-</td></tr>
-
-<tr><td valign="top">
-<b>April 8, 2000</b>
-</td><td>
-Tom Tromey wrote most of <tt>java.awt.event</tt>.
-</td></tr>
-
-<tr><td valign="top">
-<b>April 3, 2000</b>
-</td><td>
-Anthony Green made
-<a href="ftp://sources.redhat.com/pub/java/rpm/">RPMs</a>
-of gcj and libgcj.  See his original
-<a href="http://sources.redhat.com/ml/java-discuss/2000-04/msg00022.html">message</a> for some caveats.
-</td></tr>
-
-<tr><td valign="top">
-<b>Before April 2000</b>
+<b>Before September 2000</b>
 </td><td>
 <a href="old-news.html">Less recent GCJ news</a>
 </td></tr>
@@ -240,7 +161,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.48 2000/09/08 19:53:41 warrenl Exp $
+$Id: index.html,v 1.49 2000/09/30 10:17:24 bryce Exp $
 </small>
 </address>
 
