Update CVS links to refer to cvshome.org, and remove reference to needing a special gperf version since gperf 2.7.2 is out.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -171,8 +171,8 @@ revocation of check-in privileges by the Steering Committee.</p>
 change.  It is not meant to be a replacement for the CVS manual but 
 instead a supplement.  The CVS manual is distributed as part of the CVS
 sources as a texinfo file.
-<a href="http://www.cyclic.com/cvs/doc-blandy.html"> 
-http://www.cyclic.com/cvs/doc-blandy.html</a> contains
+<a href="http://www.cvshome.org/cyclic/cvs/doc-blandy.html"> 
+http://www.cvshome.org/cyclic/cvs/doc-blandy.html</a> contains
 a link to an reasonably simple introduction to CVS.</p>
 
 <p> In all the commands listed below, you can give an explicit list of
