Add a new page concerning GCC 2.96 and references to index.html.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -93,9 +93,11 @@ GNU/Linux) and cross targets and use an extensive
 <a href="http://gcc.gnu.org/testresults/">test suite</a> as well as a
 <a href="http://gcc.gnu.org/benchresults/">benchmark suite</a> to
 maintain and improve quality.
-<a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2</a> is the current release.
-<hr>
+<a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2</a> is the current release;
+<a href="gcc-2.96.html">GCC 2.96</A> and 2.97 are development snapshots.
+</p>
 
+<hr>
 
 <!--
 <h2>Upcoming Events</h2>
@@ -107,6 +109,15 @@ maintain and improve quality.
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>October 6, 2000</b></dt>
+<dd>
+We would like to point out that GCC 2.96 is not a formal GCC release nor
+will there ever be such a release.  Rather, GCC 2.96 has been the code-
+name for our development branch that will eventually become GCC 3.0.
+<small><a href="gcc-2.96.html">More...</a></small>
+</dd>
+
 <dt><b>Sep 11, 2000</b></dt>
 <dd>
 Zack Weinberg of Cygnus, a Red Hat company, has contributed
