More fixes for HTML errors found by validator.w3.org.

--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -38,12 +38,12 @@ to build elsewhere than in the source directory using Sun make</a></h2>
 <i>srcdir</i>, this patch for GCC 2.95.1 will allow you to build GCC
 using Sun make in a <i>srcdir</i> != <i>objdir</i> setup.</p>
 
-<p>Apply it with (for example) GNU patch:
+<p>Apply it with (for example) GNU patch:</p>
 <blockquote><code>
 patch -p1 -d <i>/path/to/gcc-2.95.1</i> &lt;
 gcc-2.95.1-sun-make-patch1.txt
 </code></blockquote>
-This patch is not supposed to interfere with proper building and
+<p>This patch is not supposed to interfere with proper building and
 installation on non-Sun systems or when using GNU make.</p>
 
 <p>Contact: <a href="mailto:hp@axis.se">hp@axis.se</a></p>
