--- a/htdocs/proj-cpplib.html
+++ b/htdocs/proj-cpplib.html
@@ -122,7 +122,7 @@ varargs macros in traditional mode is a deliberate feature.
 
   <li>C99's <code>_Pragma</code> intrinsic is not supported.  This is
       straightforward to implement: <code>_Pragma</code> is a special
-      symbol (see <code>special_symbol</code> in <file>cpplex.c</file>
+      symbol (see <code>special_symbol</code> in <code>cpplex.c</code>
       which parses its argument, destringizes it, and then calls
       <code>_cpp_run_directive</code> to forward it to the
       <code>#pragma</code> handler.
@@ -170,14 +170,14 @@ This is mostly done.
 <ol>
   <li>Front ends need to use cpplib's line and column numbering
       interface directly.  The existing code copies cpplib's internal
-      state into the state used by <file>diagnostic.c</file>, which is
+      state into the state used by <code>diagnostic.c</code>, which is
       better than writing out and processing linemarker commands, but
       still suboptimal.
 
   <li>The identifier hash tables used by cpplib and the front end
       should be unified.  In breadboard tests, this can net up to 10%
       speedup, mainly because the hash table used by front ends now
-      (see <file>tree.c</file>) is no good.
+      (see <code>tree.c</code>) is no good.
 
   <li>If Yacc did not insist on assigning its own values for token
       codes, there would be no need for a translation layer between
