More HTML fixes found by validator.w3.org.

--- a/htdocs/gcc-2.95/c++features.html
+++ b/htdocs/gcc-2.95/c++features.html
@@ -68,7 +68,7 @@
 * Loops are optimized better; we now move the test to the end in most
   cases, like the C frontend does.
 
-* For class D derived from B which has a member 'int i', &D::i is now of
+* For class D derived from B which has a member 'int i', &amp;D::i is now of
   type 'int B::*' instead of 'int D::*'.
 
 * An _experimental_ new ABI for g++ can be turned on with -fnew-abi.  The
