--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -132,7 +132,7 @@ flag <code>-mieee</code>.</p>
 
 
 <hr>
-<h3><a name="dos">DOS</h3>
+<h3><a name="dos">DOS</a></h3>
 
 <p>Please have a look at our <a href="binaries.html">binaries page</a>.</p>
 
@@ -487,7 +487,7 @@ A typical error message might look similiar to the following:
 /usr/ccs/bin/as: "/var/tmp/ccMsw135.s", line 11041: error: can't compute      
 value of an expression involving an external symbol.
 </CODE></BLOCKQUOTE>
-See the <a href="../faq.html#squangle">How to work around too long C++
+<p>See the <a href="../faq.html#squangle">How to work around too long C++
 symbol names?</a> FAQ entry for further information.</p>
 
 <p>Sun make in all known Solaris 1 (SunOS 4) and Solaris 2 releases has a
@@ -499,7 +499,7 @@ broken <i>VPATH</i> mechanism, which means you must either:
       apply the patches mentioned at
       <a href="http://www.gnu.org/software/gcc/extensions.html#sun-make">
       http://www.gnu.org/software/gcc/extensions.html#sun-make</a>.</li>
-</ul></p>
+</ul>
 
 
 <hr>
@@ -548,7 +548,6 @@ recommend it only for people who use Sun's compilers.</p>
   partial fix is adequate for GCC.  Revision -08 or later should fix
   the bug, but (as of 1999-10-06) it is still being tested.</li>
 </ul> 
-</p>
 
 
 <hr>
