Remove link to BUGS, which has been removed from the GCC source.

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -17,9 +17,7 @@
 complete instructions on how to report bugs.
 The manual can also be read using `<i>M-x <tt>info</tt></i>' in Emacs, or if
 the GNU <tt>info</tt> program is installed on your system by `<tt>info --node
-"(gcc)Bugs"</tt>'. Or see the file
-<a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/~checkout~/egcs/gcc/BUGS?content-type=text/plain&only_with_tag=HEAD">BUGS</a>
-included with the GCC source code.</p>
+"(gcc)Bugs"</tt>'.
 
 <p>Before you report a bug for the <em>C++ compiler</em>, please check
 the <a href="#known">list of well-known bugs</a>. If you want to
