Add links to release announcements in table of release dates.

--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -31,16 +31,16 @@ number is maintained.</p>
 <table border=1 cellspacing=0 cellpadding=5>
 <tr><th>Release Name</th><th>Version number</th><th>Release date</th></tr>
 
-<tr><td>GCC 2.95.2</td><td>2.95.2</td> <td>October 24, 1999</td></tr>
-<tr><td>GCC 2.95.1</td><td>2.95.1</td> <td>August 19, 1999</td></tr>
-<tr><td>GCC 2.95</td>  <td>2.95</td>   <td>July 31, 1999</td></tr>
-<tr><td>EGCS 1.1.2</td><td>2.91.66</td><td>March 15, 1999</td></tr>
-<tr><td>EGCS 1.1.1</td><td>2.91.60</td><td>December 1, 1998</td></tr>
-<tr><td>EGCS 1.1.0</td><td>2.91.57</td><td>September 3, 1998</td></tr>
-<tr><td>EGCS 1.0.3</td><td>2.90.29</td><td>May 15, 1998</td></tr>
-<tr><td>EGCS 1.0.2</td><td>2.90.27</td><td>March 16, 1998</td></tr>
-<tr><td>EGCS 1.0.1</td><td>2.90.23</td><td>January 6, 1998</td></tr>
-<tr><td>EGCS 1.0.0</td><td>2.90.21</td><td>December 3, 1997</td></tr>
+<tr><td><a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2</a></td><td>2.95.2</td> <td>October 24, 1999</td></tr>
+<tr><td><a href="gcc-2.95/gcc-2.95.1.html">GCC 2.95.1</a></td><td>2.95.1</td> <td>August 19, 1999</td></tr>
+<tr><td><a href="gcc-2.95/gcc-2.95.html">GCC 2.95</a></td>  <td>2.95</td>   <td>July 31, 1999</td></tr>
+<tr><td><a href="egcs-1.1/egcs-1.1.2.html">EGCS 1.1.2</a></td><td>2.91.66</td><td>March 15, 1999</td></tr>
+<tr><td><a href="egcs-1.1/egcs-1.1.1.html">EGCS 1.1.1</a></td><td>2.91.60</td><td>December 1, 1998</td></tr>
+<tr><td><a href="egcs-1.1/egcs-1.1.html">EGCS 1.1.0</a></td><td>2.91.57</td><td>September 3, 1998</td></tr>
+<tr><td><a href="egcs-1.0/egcs-1.0.3.html">EGCS 1.0.3</a></td><td>2.90.29</td><td>May 15, 1998</td></tr>
+<tr><td><a href="egcs-1.0/egcs-1.0.2.html">EGCS 1.0.2</a></td><td>2.90.27</td><td>March 16, 1998</td></tr>
+<tr><td><a href="egcs-1.0/egcs-1.0.1.html">EGCS 1.0.1</a></td><td>2.90.23</td><td>January 6, 1998</td></tr>
+<tr><td><a href="egcs-1.0/egcs-1.0.html">EGCS 1.0.0</a></td><td>2.90.21</td><td>December 3, 1997</td></tr>
 
 </table>
 
