--- a/htdocs/projects.html
+++ b/htdocs/projects.html
@@ -87,19 +87,6 @@ doing any substantial format checking work.</p>
 
 <ul>
 
-<li>Move details of flag characters from code into data.</li>
-
-<li>Try to eliminate from <code>check_format_info</code> all
-conditionals on any particular format type.</li>
-
-<li>Warning for wide string literals with narrow formats.</li>
-
-<li><code>printf</code> <code>%m</code> with <code>$</code> operand
-numbers should be allowed.</li>
-
-<li>Provide a usable format-checking interface returning a status code
-instead of diagnostics.</li>
-
 <li>Make re-entrant: eliminate global state used for <code>$</code>
 format checking.</li>
 
@@ -114,9 +101,9 @@ format checking.</li>
 <li>Check formats where the format string is a conditional expression,
 e.g. <code>printf(nfoo > 1 ? "%d foos" : "%d foo", nfoo)</code>.</li>
 
-<li><code>intmax_t</code>, <code>%j</code> and
-<code>&lt;stdint.h&gt;</code>.
-See <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view&amp;pr=448&amp;database=gcc">PR c/448</a>.</li>
+<li>Check formats where the format string is a <code>const</code>
+array of characters of static storage duration for which the
+initializer is available.</li>
 
 <li>Someone who knows C++ should compare the format checking (used by
 both C and C++) against the C++ standard requirements.  (Pedantic
