Clarify topic headings with <h2>

--- a/htdocs/projects.html
+++ b/htdocs/projects.html
@@ -153,8 +153,10 @@ functions.</li>
 
 <hr>
 
-<h2>The old PROJECTS file.</h2>  Stuff I know has been done has been deleted.
-Stuff in progress has a contact name associated with it.
+<h1>The old PROJECTS file</h1>
+
+<p>Stuff I know has been done has been deleted.
+Stuff in progress has a contact name associated with it.</p>
 
 <p>Better optimization.
 
@@ -418,7 +420,7 @@ into a portable framework: when can you detect this situation and
 still be able to allocate a junk register?
 </ol>
 
-<p>Simpler porting.
+<h2>Simpler porting</h2>
 
 <p>Right now, describing the target machine's instructions is done
 cleanly, but describing its addressing mode is done with several
@@ -441,7 +443,7 @@ kind of addressing, and this pattern would have:
       in the RTL expression.
 </ul>
 
-<p>Other languages.
+<h2>Other languages</h2>
 
 <p>We currently have front ends for C, C++, Objective C, CHILL,
 Fortran, and Java.  Pascal and Ada front ends exist but have not yet
@@ -452,7 +454,7 @@ been integrated.
 <p>Pascal, Modula-2 and Ada require the implementation of functions
 within functions.  Some of the mechanisms for this already exist.
 
-<p>More extensions.
+<h2>More extensions</h2>
 
 <ul>
 <li>Generated unique labels.  Have some way of generating distinct
@@ -479,7 +481,7 @@ This would call foo, which returns a structure, and then store the
 several components of the structure into the variables a, b, and c.
 </ul>
 
-<p>Generalize the machine model.
+<h2>Generalize the machine model</h2>
 
 <p>Some new compiler features may be needed to do a good job on
 machines where static data needs to be addressed using base registers.
@@ -491,16 +493,16 @@ now have a way to understand this.
 <p>The scheduler does not do very well on recent RISC machines.  Haifa
 helps but not enough.
 
-<p>More warnings.
+<h2>More warnings</h2>
 
-Warn about statements that are undefined because the order of
+<p>Warn about statements that are undefined because the order of
 evaluation of increment operators makes a big difference.  Here is an
 example:
 <pre>
 *foo++ = hack (*foo);
 </pre>
 
-<p>Better documentation of how GCC works and how to port it.
+<h2>Better documentation of how GCC works and how to port it</h2>
 
 <p>Here is an outline proposed by Allan Adler.
 
