Document no confidentiality

--- a/htdocs/gnats.html
+++ b/htdocs/gnats.html
@@ -40,8 +40,8 @@ report. The fields have the following purpose:<p>
 <dd>Your organization. You can leave this field blank.</dd>
 
 <dt><strong>Confidential</strong></dt>
-<dd>Typically, you say 'no' here, unless you want that only GCC maintainers
-can access your report</dd>
+<dd>This field is unused and set to 'no'. All bug reports, including
+sample code, are publicly accessible.</dd>
 
 <dt><strong>Synopsis</strong></dt> 
 <dd>A one-line description of the problem; something like "gcc 2.95
