Fix a couple of typos. By Jan van Male <jan.vanmale@fenk.wau.nl>.

--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -74,7 +74,7 @@ native compiler.  You can then use the native GCC compiler to build the
 cross compiler.
 
 <p>Assuming you have already installed a native copy of GCC and configured
-your corss compiler, issue the command "make", which performs the
+your cross compiler, issue the command "make", which performs the
 following steps:
 <ul>
   <li>Build host tools necessary to build the compiler such as texinfo, bison,
