--- a/htdocs/install/download.html
+++ b/htdocs/install/download.html
@@ -21,7 +21,7 @@ will be included in the full distribution.</p>
 <p>If you choose to download specific components, you must download the core
 gcc distribution plus any language specific distributions you wish to
 use.  The core distribution includes the C language front-end as well as the
-shared componenets. Each language has a tarball which includes the language
+shared components. Each language has a tarball which includes the language
 front-end as well as the language runtime (when appropriate).</p>
 
 <p>Unpack the core distribution as well as any language specific
