--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -211,7 +211,7 @@ building affected files with that flag or by using the GNU assembler.
 Users of GNU assembler should see the note below for hazards on doing so.</p>
 
 <p>If you choose to configure with <code>--enable-shared</code> you should also
-specificy <code>--with-gnu-as --disable-multilib</code> even if you are not
+specify <code>--with-gnu-as --disable-multilib</code> even if you are not
 using the GNU assembler.   In doing so you will give up the ability
 to generate COFF executables as described below.   This combination 
 of flags is necessary to suppress negative interactions with multilibing.</p>
@@ -244,7 +244,7 @@ ftp://ftp.sco.com/Supplements/rs505a/</a> and <a href="ftp://ftp.sco.com/SLS/">
 OSS499A</a>.</p>
 
 <p>The dynamic linker in OpenServer 5.0.5 (earlier versions may show
-the same problem) aborts on certain g77-compiled programs.  It's particluarly
+the same problem) aborts on certain g77-compiled programs.  It's particularly
 likely to be triggered by building Fortran code with the <code>-fPIC</code>
 flag.
 Although it's conceivable that the error could be triggered by other
@@ -341,7 +341,7 @@ using the original "small format".  A correct version of the routines is
 shipped with AIX 4.3.2.</p>
 
 <p>The initial assembler shipped with AIX 4.3.0 generates incorrect object
-files.  A fix for APAR IX74254 (64BIT DISASSEMBLED OUPUT FROM COMPILER FAILS
+files.  A fix for APAR IX74254 (64BIT DISASSEMBLED OUTPUT FROM COMPILER FAILS
 TO ASSEMBLE/BIND) is available from IBM Customer Support and from its
 <a href="http://service.boulder.ibm.com/">service.boulder.ibm.com</a>
 website as PTF U453956.  This fix is incorporated in AIX 4.3.1 and above.</p>
@@ -378,7 +378,8 @@ replacement that does can be obtained at
 <p>If you try to build the integrated C++ & C++ runtime libraries on this system
 you will run into trouble with include files.  The way to get around this is
 to use the following sequence.  Note you must have write permission to
-the directory <i>prefix</i> you secified in the configuration preocess of GCC for this sequence to work.</p>
+the directory <i>prefix</i> you specified in the configuration process of GCC
+for this sequence to work.</p>
 <pre>
   cd bld-gcc
   make all-texinfo all-bison all-byacc all-binutils all-gas all-ld
@@ -482,7 +483,7 @@ compiler, see our <a href="binaries.html">binaries page</a> for
 details.</p>
 
 <p>Sun as 4.X is broken in that it cannot cope with long symbol names.
-A typical error message might look similiar to the following:
+A typical error message might look similar to the following:
 <BLOCKQUOTE><CODE>
 /usr/ccs/bin/as: "/var/tmp/ccMsw135.s", line 11041: error: can't compute      
 value of an expression involving an external symbol.
