--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -8,7 +8,7 @@
 <h1 align="center">Installation Instructions: Testing GCC</h1>
 
 <p><strong>Please note that this is only applicable to current development
-versions of GCC and GCC 3.0 or latter. GCC 2.95.x does not come with a
+versions of GCC and GCC 3.0 or later. GCC 2.95.x does not come with a
 testsuite.</strong></p>
 
 <p>Before you install GCC, you might wish to run the testsuite. This
@@ -68,8 +68,8 @@ output of `<code>make check</code>` into a file and look at the
 <p>After the testsuite has run you'll find various *.sum and *.log
 files in the testsuite subdirectories. The *.log files contain a
 detailed log of the compiler invocations and the corresponding
-results, the *.sum files summarize the results. This summaries list
-all the tests that have been run with a corrsponding status code:</p>
+results, the *.sum files summarize the results. These summaries list
+all the tests that have been run with a corresponding status code:</p>
 
 <ul>
 <li>PASS: the test passed as expected
