--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -116,8 +116,9 @@ GCC.  A partial list of supported <tt>options</tt>:
   603e, or ultrasparc) you provide, please check the configure script
   for a complete list of supported models.
 
-  <li> <tt>--enable-target-optspace</tt> -- Specify that target libraries should  be optimzied for code space instead of code speed.  This is the default for
-  the m32r platform.
+  <li> <tt>--enable-target-optspace</tt> -- Specify that target libraries
+  should  be optimized for code space instead of code speed.  This is the
+  default for the m32r platform.
 
   <li> <tt>--enable-cpp</tt> -- Specify that a shell script which emulates
   traditional cpp functionality should be installed.
