--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -11,6 +11,28 @@
 home page</a>.
 
 <dl>
+<dt><b>May 2, 2000</b></dt>
+<dd>
+<p>Stan Cox and Jason Eckhardt of Cygnus, a Red Hat company, have
+contributed a <a href="news/reorder.html">basic block reordering
+pass</a>.  The optimization can reposition basic blocks from across
+the entire function in an attempt to reduce branch penalties and
+enhance instruction cache efficiency.</p>
+
+<p>Our thanks go to Michael Hayes, Jan Hubicka, and Graham Stott who
+noticed or fixed defects or made other useful suggestions.</p>
+</dd>
+
+<dt><b>May 1, 2000</b></dt>
+<dd>
+<p>Richard Earnshaw of ARM Ltd, and Nick Clifton of Cygnus, a Red Hat
+company, have contributed a new backend for the Arm and Thumb
+processors.</p>
+
+<p>The new backend combines code generation for the Arm, the Thumb and
+the StrongArm into one compiler, with the target processor and
+instruction sets being selectable via command line switches.</p>
+</dd>
 
 <dt><b>April 30, 2000</b></dt>
 <dd>
