--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -6,10 +6,17 @@
 
 <body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
 
-<TABLE>
+<TABLE BORDER="0" CELLSPACING="0" CELLPADDING="2">
 <TR>
-<TD VALIGN="TOP" WIDTH="1%" BGCOLOR="#FFFFBB">
+
+<TD VALIGN="TOP">
+<TABLE BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="1%">
+
+<TR><TD><TABLE CELLSPACING="0" WIDTH="100%">
+<TR BGCOLOR="#FFEE99"><TD>
 <H2>About</H2>
+</TD></TR>
+<TR BGCOLOR="#FFFFBB"><TD>
 <P>
 <A HREF="gccmission.html">Mission Statement</A><BR>
 <A HREF="lists.html">Mailing lists</A><BR>
@@ -17,7 +24,15 @@
 <A HREF="http://gcc.gnu.org/thanks.html">Contributors</A><BR>
 <A HREF="steering.html">Steering Committee</A><BR>
 </P>
+</TD></TR>
+</TABLE></TD></TR>
+
+
+<TR><TD><TABLE CELLSPACING="0" WIDTH="100%">
+<TR BGCOLOR="#FFEE99"><TD>
 <H2>Docs</H2>
+</TD></TR>
+<TR BGCOLOR="#FFFFBB"><TD>
 <P>
 <A HREF="http://gcc.gnu.org/cgi-bin/fom">FAQ</A><BR>
 <A HREF="install/index.html">Installation</A><BR>
@@ -25,7 +40,15 @@
 <A HREF="http://www.gnu.org/software/year2000.html">Year 2000</A><BR>
 <A HREF="readings.html">Readings</A>
 </P>
+</TD></TR>
+</TABLE></TD></TR>
+
+
+<TR><TD><TABLE CELLSPACING="0" WIDTH="100%">
+<TR BGCOLOR="#FFEE99"><TD>
 <H2>Development</H2>
+</TD></TR>
+<TR BGCOLOR="#FFFFBB"><TD>
 <P>
 <A HREF="contribute.html">Contributing</A><BR>
 <A HREF="contributewhy.html">...Why?</A><BR>
@@ -36,22 +59,36 @@
 <A HREF="cvswrite.html">CVS write access</A><BR>
 <A HREF="gnatswrite.html">GNATS write access</A><BR>
 </P>
+</TD></TR>
+</TABLE></TD></TR>
+
+
+<TR><TD><TABLE CELLSPACING="0" WIDTH="100%">
+<TR BGCOLOR="#FFEE99"><TD>
 <H2>Bugs</H2>
+</TD></TR>
+<TR BGCOLOR="#FFFFBB"><TD>
 <P>
 <A HREF="bugs.html">Reporting...</A><BR>
 <A HREF="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;user=guest&amp;password=guest&amp;cmd=login">GNATS</A><BR>
 <A HREF="bugs.html">Known bugs</A>
 </P>
+</TD></TR>
+</TABLE></TD></TR>
+
+
+<TR><TD><TABLE CELLSPACING="0" WIDTH="100%">
+<TR BGCOLOR="#FFEE99"><TD>
 <H2>Download</H2>
+</TD></TR>
+<TR BGCOLOR="#FFFFBB"><TD>
 <P>
 <A HREF="releases.html">Releases</A><BR>
 <A HREF="snapshots.html">Snapshots</A><BR>
 <A HREF="mirrors.html">Mirror sites</A><BR>
 <A HREF="install/binaries.html">Binaries</A>
 </P>
-
 <HR>
-
 <FORM METHOD="get" ACTION="http://gcc.gnu.org/cgi-bin/ml-request">
   <SMALL>Get our announcements:<BR>
   <INPUT TYPE="hidden" NAME="digest"    VALUE="off">
@@ -61,10 +98,13 @@
   <INPUT TYPE="Submit" NAME="submit"    VALUE="Subscribe!">
   </SMALL>
 </FORM>
+</TD></TR>
+</TABLE></TD></TR>
 
+</TABLE>
 </TD>
 
-<TD BGCOLOR="white" VALIGN="top">
+<TD BGCOLOR="white" VALIGN="top" WIDTH="99%">
 
 <IMG SRC="gcc.jpg" ALT="" ALIGN="RIGHT">
 
