Our project is now called GCC, not gcc.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -20,17 +20,17 @@
   we post announcements about releases or other important events.
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc/">gcc</a></b>
-  is a high volume list for general development discussions about gcc.
+  is a high volume list for general development discussions about GCC.
   Anything not
-  covered by other mailing lists is suitable for discussion on <b>gcc</b>.
+  covered by other mailing lists is suitable for discussion here.
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-help/">gcc-help</a></b>
   is a relatively high volume list for people searching for help in building
-  gcc.
+  GCC.
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-bugs/">gcc-bugs</a></b>
   is a relatively high volume list for bug reports and general discussion
-  about bugs in gcc.
+  about bugs in GCC.
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-patches/">gcc-patches</a></b>
   is a relatively high volume list for patch submissions and discussion of
@@ -39,7 +39,7 @@
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-testresults/">
   gcc-testresults</a></b> is a moderate volume list where test results for
-  the gcc compilers are posted.
+  the GCC compilers are posted.
 </ul>
 
 <p>Read only lists:</p>
@@ -51,15 +51,15 @@
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a></b>
   is a read-only, relatively high volume list which tracks checkins to the
-  gcc CVS repository.
+  GCC CVS repository.
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a></b>
   is a read-only, relatively low volume list which tracks checkins to
-  the gcc webpages CVS repository.
+  the GCC webpages CVS repository.
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-regression/">
   gcc-regression</a></b> is a read-only moderate volume list where regression
-  results for the gcc compilers are posted.
+  results for the GCC compilers are posted.
 </ul>
 
 <p>To post a message, just send mail to <i>listname</i><tt>@gcc.gnu.org</tt>.
