Clean up references to egcs.cygnus.com and anoncvs.cygnus.com. By Joe Buck <jbuck@racerx.synopsys.com>.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -77,7 +77,7 @@ contributions must meet.</p>
        also for documentation (i.e., .texi files).  They are not required
        for updates to the web pages.
   <li> <p>The patch itself.  If you are accessing the <a href="cvs.html">
-       CVS repository</a> at Cygnus, use 
+       CVS repository</a> at gcc.gnu.org, use 
        &quot;<code>cvs update; cvs diff -c3p</code>&quot;; else, use 
        &quot;<code>diff -c3p OLD NEW</code>&quot; or 
        &quot;<code>diff -up OLD NEW</code>&quot;.
