--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -32,10 +32,10 @@ GCC sources with the following sequence of commands:
 
 <p>Set CVSROOT in your environment to
 
-<blockquote><code>:pserver:anoncvs@anoncvs.cygnus.com:/cvs/gcc</code></blockquote>
+<blockquote><code>:pserver:anoncvs@gcc.gnu.org:/cvs/gcc</code></blockquote>
 
 <p>Or alternately add 
-<blockquote><code>-d :pserver:anoncvs@anoncvs.cygnus.com:/cvs/gcc</code></blockquote>
+<blockquote><code>-d :pserver:anoncvs@gcc.gnu.org:/cvs/gcc</code></blockquote>
 in the CVS commands below (place it immediately after <code>cvs</code>,
 i.e., before any other CVS arguments).
 
