--- a/htdocs/gcc-2.95/caveats.html
+++ b/htdocs/gcc-2.95/caveats.html
@@ -33,7 +33,8 @@
   <li>GCC 2.95 has an integrated libstdc++, but does not have an integrated
   libg++.  Furthermore old libg++ releases will not work with GCC 2.95.  You can
   retrieve a recent copy of libg++ from the
-  <a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/libg++-2.8.1.3.tar.gz">  egcs ftp server</a>.
+  <a href="ftp://gcc.gnu.org/pub/gcc/infrastructure/libg++-2.8.1.3.tar.gz">GCC
+  ftp server</a>.
   <br>Note most C++ programs only need libstdc++.
 
   <li> Exception handling may not work with shared libraries, particularly
