--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -94,7 +94,7 @@ and try to avoid cross posting a message to several lists.
 
 <p>In addition to the web archives that are linked from the descriptions
 above, we also provide
-<a href="ftp://egcs.cygnus.com/pub/gcc/mail-archives/">mbox formatted
+<a href="ftp://gcc.gnu.org/pub/gcc/mail-archives/">mbox formatted
 archives of each mailing list</a>.
 
 <!-- The server-side included form does not show up at mirrors, so refer
