--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -91,14 +91,14 @@ possible, the release will support other targets as well.</p>
 
 <table align="center">
 <caption>Primary Evaluation Platforms</caption>
-<tr><th>Chip     <th>OS              <th>Triplet
-<tr><td>Alpha    <td>RedHat Linux 6.2<td>
-<tr><td>HPPA     <td>HPUX            <td>
-<tr><td>Intel x86<td>Debian 2.1      <td>i686-pc-linux-gnu
-<tr><td>Intel x86<td>RedHat Linux 6.2<td>i686-pc-linux-gnu
-<tr><td>MIPS     <td>IRIX 6.5        <td>mips-sgi-irix6.5
-<tr><td>PowerPC  <td>AIX 4.3.3       <td>powerpc-ibm-aix4.3.3.0
-<tr><td>SPARC    <td>Solaris 2.7     <td>sparc-sun-solaris2.7
+<tr><th>Chip     <th>OS                  <th>Triplet
+<tr><td>Alpha    <td>RedHat Linux 6.2    <td>
+<tr><td>HPPA     <td>HPUX                <td>
+<tr><td>Intel x86<td>Debian GNU/Linux 2.2<td>i686-pc-linux-gnu
+<tr><td>Intel x86<td>RedHat Linux 6.2    <td>i686-pc-linux-gnu
+<tr><td>MIPS     <td>IRIX 6.5            <td>mips-sgi-irix6.5
+<tr><td>PowerPC  <td>AIX 4.3.3           <td>powerpc-ibm-aix4.3.3.0
+<tr><td>SPARC    <td>Solaris 2.7         <td>sparc-sun-solaris2.7
 </table>
 
 <p>GCC's performance on the following platforms will not be required
@@ -124,13 +124,15 @@ answering questions and reviewing patches as time permits.</p>
 
 <table align="center">
 <caption>Secondary Evaluation Platforms</caption>
-<tr><th>Chip     <th>OS              <th>Triplet
-<tr><td>Intel x86<td>FreeBSD 4.0     <td>i386-unknown-freebsdelf
-<tr><td>PowerPC  <td>Linux           <td>
-<tr><td>SPARC    <td>SunOS 4.1.4     <td>sparc-sun-sunos4.1.4
-<tr><td>SPARC    <td>RedHat Linux 6.2<td>
-<tr><td>ARM      <td>Linux           <td>
-<tr><td>Intel x86<td>Cygwin          <td>i686-pc-cygwin
+<tr><th>Chip     <th>OS                  <th>Triplet
+    <th>Tester
+<tr><td>Intel x86<td>FreeBSD 4.0         <td>i386-unknown-freebsdelf
+<tr><td>PowerPC  <td>Linux               <td>
+<tr><td>SPARC    <td>SunOS 4.1.4         <td>sparc-sun-sunos4.1.4
+<tr><td>SPARC    <td>Debian GNU/Linux 2.2<td>sparc-linux
+    <td><a href="mailto:bcollins@debian.org">Ben Collins</a>
+<tr><td>ARM      <td>Linux               <td>
+<tr><td>Intel x86<td>Cygwin              <td>i686-pc-cygwin
 </table>
 
 <h2>Language Support</h2>
