--- a/htdocs/projects.html
+++ b/htdocs/projects.html
@@ -90,27 +90,26 @@ doing any substantial format checking work.</p>
 <li>Make re-entrant: eliminate global state used for <code>$</code>
 format checking.</li>
 
-<li><code>strftime</code>: warnings for more than one of
-<code>0</code>, <code>-</code>, <code>_</code> flags; more than one of
-<code>#</code>, <code>^</code> flags; <code>0</code>, <code>-</code>,
-<code>_</code> flags without width on formats where inappropriate.</li>
-
-<li>glibc <code>scanf</code> extension flags <code>'</code> and
-<code>I</code>.</li>
+<li><code>strftime</code>: warnings for use of <code>0</code>,
+<code>-</code> or <code>_</code> flags without width on formats where
+inappropriate.</li>
 
 <li>Check formats where the format string is a conditional expression,
-e.g. <code>printf(nfoo > 1 ? "%d foos" : "%d foo", nfoo)</code>.</li>
+e.g. <code>printf(nfoo > 1 ? "%d foos" : "%d foo", nfoo)</code> (<a
+href="http://gcc.gnu.org/ml/gcc-patches/2000-10/msg00395.html">patch</a>
+submitted).</li>
 
 <li>Check formats where the format string is a <code>const</code>
-array of characters of static storage duration for which the
-initializer is available.</li>
+array of characters for which the initializer is available.</li>
 
 <li>Someone who knows C++ should compare the format checking (used by
 both C and C++) against the C++ standard requirements.  (Pedantic
 messages should not be referring to ISO C when the language used is
 C++.  At least some of the tree nodes used need to be created by some
 function shared between the C and C++ front ends, but at present are
-only created for C.)</li>
+only created for C (<a
+href="http://gcc.gnu.org/ml/gcc-patches/2000-10/msg00247.html">patch</a>
+submitted).)</li>
 
 <li>For bounded pointers: check that all levels of pointers in the
 list of format argument have the correct boundedness
@@ -132,7 +131,8 @@ c/479</a>).</li>
 <li>Handle format attributes on function pointers and typedefs; see <a
 href="http://gcc.gnu.org/ml/gcc/2000-09/msg00339.html">a message about
 this</a>.  Of course, this should be done so as to work for both C++
-and C.</li>
+and C.  Essentially, format attributes should be associated with the
+function type rather than with a function name.</li>
 
 <li>Get Marc Espie's <code>__attribute__((__nonnull__))</code> patch
 in (he may be working on a cleaner version that applies to current
