Add The Written Word and its offerings.

--- a/htdocs/install/binaries.html
+++ b/htdocs/install/binaries.html
@@ -35,6 +35,11 @@ contact their makers.</p>
     98, and NT</a> |
     <a href="http://www.xraylith.wisc.edu/~khan/software/gnu-win32/">GNU
     Win32 related projects</a> by Mumit Khan
+
+<li><a href="ftp://ftp.thewrittenword.com/packages/free/by-name/gcc-2.95.2/">The
+Written Word</a> offers binaries for Solaris 2.5.1, 2.6, 2.7/SPARC, 2.7/Intel,
+IRIX 6.2, 6.5, Digital UNIX 4.0D, HP-UX 10.20, and HP-UX 11.00.
+
 </ul>
 
 <p>In addition to those specific offerings, you can get a binary
