Fix markup typo.

--- a/htdocs/gnatswrite.html
+++ b/htdocs/gnatswrite.html
@@ -15,7 +15,7 @@ bounce.</p>
 
 <p>You can access the database either via <a
 href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl">gnatsweb</a>, or via
-the gnatsd running on gcc.gnu.org.</a>
+the gnatsd running on gcc.gnu.org.</p>
 
 <h2>Using gnatsd and Emacs</h2>
 
