Add missing <body> tag.

--- a/htdocs/gnatswrite.html
+++ b/htdocs/gnatswrite.html
@@ -4,6 +4,7 @@
 <title>Maintaining the GCC GNATS installation</title>
 </head>
 
+<body>
 <h1>Accessing the database</h1>
 
 <p>In order to manage PRs, you need an account on gcc.gnu.org, and a
