Add missing <BR>.

--- a/htdocs/gnatswrite.html
+++ b/htdocs/gnatswrite.html
@@ -31,7 +31,7 @@ build to your <code>load-path</code> in order to pick up the gnats library.
 <p>Finally, add the following entries to your <code>.emacs</code> file</p>
 
 <blockquote><code>
-  (load-library "gnats") 
+  (load-library "gnats")<BR>
   (setq gnats:network-server "gcc.gnu.org")<BR>
   (setq gnats:userid "YourUserName")<BR>
   (setq gnats:password "YourGNATSPassword")<BR>
